# wkp

./: Cargo.toml  README.md
src/: cli.rs  errors.rs  lib.rs  macros.rs  schema.rs  urlbuilder.rs
src/urlbuilder/: tests.rs
