[package]
name = "wikipedia-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wkp"
path = "src/cli.rs"

# color_eyre optimizations on debug mode
[profile.dev.package.backtrace]
opt-level = 3

# Release Optimizations
[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
colored = "2.0.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.143", features = ["derive"] }

[dev-dependencies]
test-case = "2.2.1"
